Add initial implementation of AI crew system with research and reporting capabilities
- Introduced `example.env` for configuration settings.
- Created a comprehensive report structure in `report.md` and `report.json` for AI agents in 2025.
- Developed data models for research points and executive reports using Pydantic.
- Implemented agents for research, reporting, and formatting tasks in `crew.py`.
- Configured tasks for research and reporting in `tasks.yaml`, including output specifications.
- Enhanced agent configurations in `agents.yaml` to support new roles.
- Added binary files for training and agent data.
- Established a main execution flow in `main.py` to run the crew with updated parameters.
- Ensured outputs are structured for clarity and usability in markdown format.

--- a/my_crew/src/my_crew/config/agents.yaml
+++ b/my_crew/src/my_crew/config/agents.yaml
@@ -17,3 +17,14 @@ reporting_analyst:
     You're a meticulous analyst with a keen eye for detail. You're known for
     your ability to turn complex data into clear and concise reports, making
     it easy for others to understand and act on the information you provide.
+
+formatter:
+  role: >
+    Technical Writing and Markdown Specialist
+  goal: >
+    Transform research reports into beautifully formatted, readable markdown documents
+  backstory: >
+    You are an expert in technical writing and markdown formatting. Your specialty
+    lies in taking complex research findings and transforming them into well-structured,
+    visually appealing reports that are easy to read and understand. You have a keen
+    eye for detail and know how to use markdown features to enhance readability.
